Initial main content style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         </nav>
     </header>
     <main>
-        MAIN
+        <div>
+            <h1>Welcome to Yoga Lifestyle studio!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur itaque aperiam totam eveniet nesciunt vel inventore nobis possimus architecto beatae aut, harum ipsum animi nam quasi voluptatum? At, mollitia.</p>
+            <a href="">Sign up for classes</a>
+        </div>
+        <img src="./yoga.png" alt="Yoga person">
     </main>
 </body>
 </html>
