--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="./logo.png" alt="Logo">
+        <img src="./img/logo.png" alt="Logo">
         <nav>
             <a href="#">Home</a>
             <a href="#">Instructors</a>
@@ -26,7 +26,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur itaque aperiam totam eveniet nesciunt vel inventore nobis possimus architecto beatae aut, harum ipsum animi nam quasi voluptatum? At, mollitia.</p>
             <a href="">Sign up for classes</a>
         </div>
-        <img src="./yoga.png" alt="Yoga person">
+        <img src="./img/yoga.png" alt="Yoga person">
     </main>
 </body>
 </html>
