--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div>
-            <h1>Welcome to Yoga Lifestyle studio!</h1>
+            <h1>Welcome to Yoga <span>Lifestyle</span> studio!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur itaque aperiam totam eveniet nesciunt vel inventore nobis possimus architecto beatae aut, harum ipsum animi nam quasi voluptatum? At, mollitia.</p>
             <a href="">Sign up for classes</a>
         </div>
